GNOME Bugzilla – Bug 658785
online accounts should not connect automatically
Last modified: 2011-09-15 07:34:48 UTC
When using online accounts with gnome-shell... empathy settings are not respected. The setting 'connect automatically on startup' is not respected at all... by default the online account is automatically logged in after user has unlocked his keyring. Previous 'status' is not respected. If user was in 'invisible' mode... online accounts should not automatically force 'available' status. Online accounts (or gnome-shell) should respect previous states and user settings.
Which exact gnome-shell and empathy versions is this about?
Currently I am testing Empathy 3.1.91 with gnome shell 3.1.91... from the [gnome unstable] repositories, Arch Linux.
I think you are misunderstanding what gnome-online-accounts is about - g-o-a does not in any way enforce any policy or log in to any chat accounts. I think your problem is with empathy. Reassigning.
What happen exactly? You activate the 'Chat' feature of a GOA account and it doesn't have the same presence as your other accounts? Or it doesn't connect when you start empathy? Btw, you can now be online without starting Empathy; just use the new presence picker in Shell's user menu.
Here is a basic rundown: After activating online accounts, empathy ALWAYS logs in automatically and always into 'Available' status. I think the integration of empathy is absolutely fantastic. But, the presence picker should respect user settings. It should either: A: Remember what state your online accounts were in last time your username was logged into gnome shell or B: Give us the option to NOT log in automatically. Empathy provides an option, "Connect Automatically on Startup" that can be toggled off, and that should be respected by the gnome-shell.
(In reply to comment #5) > Here is a basic rundown: > > After activating online accounts, empathy ALWAYS logs in automatically and > always into 'Available' status. You mean that GOA account are always online when starting the Shell? > I think the integration of empathy is absolutely fantastic. But, the presence > picker should respect user settings. > > It should either: > > A: Remember what state your online accounts were in last time your username was > logged into gnome shell Agreed, atm they all should be offline by default, it's weird to have GOA accounts behaving in a different way. I'll do some tests. I also opened bug #659021 btw.
Created attachment 196476 [details] [review] goa-mc-plugin: do not set the ConnectAutomatically Account property GOA accounts should behave like regular TP accounts and so shouldn't connect automatically.
*** Bug 658961 has been marked as a duplicate of this bug. ***
*** Bug 658945 has been marked as a duplicate of this bug. ***
Review of attachment 196476 [details] [review]: ++
Attachment 196476 [details] pushed as 0cfae96 - goa-mc-plugin: do not set the ConnectAutomatically Account property