goa-mc-plugin: do not set the ConnectAutomatically Account property

GOA accounts should behave like regular TP accounts and so shouldn't connect
automatically.

https://bugzilla.gnome.org/show_bug.cgi?id=658785